--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -48,13 +48,9 @@ jobs:
     runs-on: ubuntu-latest
     services:
       rabbitmq:
-        image: rabbitmq:4.0.2-management-alpine
+        image: rabbitmq:4.0.2-alpine
         ports:
           - 5672:5672
-        options: >-
-          --health-cmd="curl --fail http://localhost:15672/cli/ > /dev/null"
-          --health-timeout=30s
-          --health-retries=3
     strategy:
       fail-fast: false
       matrix:
