--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "BrokRPC"
 version = "0.1.0"
-description = ""
+description = "framework for gRPC like server-client communication over message brokers"
 authors = ["zerlok <danil.troshnev@gmail.com>"]
 readme = "README.md"
 
@@ -20,7 +20,7 @@ ruff = "^0.4.9"
 pytest-asyncio = "^0.24.0"
 pyprotostuben = "^0.1.2"
 pytest-timeout = "^2.3.1"
-
+pytest-mypy-plugins = "^3.1.2"
 
 
 [build-system]
@@ -62,9 +62,6 @@ strict = true
 module = ["google.rpc.*"]
 ignore_missing_imports = true
 
-[[tool.mypy.overrides]]
-module = ["brokrpc.rpc.protobuf.*", "tests.integration.rpc.*"]
-ignore_errors = true
 
 [tool.pytest.ini_options]
 pythonpath = [
