--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,23 @@ version = "0.1.0"
 description = "framework for gRPC like server-client communication over message brokers"
 authors = ["zerlok <danil.troshnev@gmail.com>"]
 readme = "README.md"
+license = "MIT"
+keywords = [
+    "python",
+    "protobuf",
+    "amqp",
+    "grpc",
+    "message-queue",
+    "message-broker",
+]
+classifiers = [
+    "Development Status :: 1 - Planning",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Topic :: System :: Networking",
+    "Typing :: Typed",
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -17,17 +34,20 @@ cli = ["aiofiles"]
 protobuf = ["protobuf", "googleapis-common-protos"]
 aiormq = ["aiormq"]
 
+[tool.poetry.scripts]
+brokrpc = "brokrpc.cli:main"
+
 [tool.poetry.group.dev.dependencies]
 types-protobuf = "^5.26.0.20240422"
-mypy = "^1.10.0"
-pytest = "^8.2.0"
+mypy = "^1.13.0"
+pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
-ruff = "^0.4.9"
+ruff = "^0.7.4"
 pytest-asyncio = "^0.24.0"
-pyprotostuben = "^0.1.2"
 pytest-timeout = "^2.3.1"
 pytest-mypy-plugins = "^3.1.2"
 types-aiofiles = "^24.1.0.20240626"
+pyprotostuben = "0.2.1"
 
 
 [build-system]
@@ -35,6 +55,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
+target-version = "py312"
 include = ["src/**/*.py", "tests/**/*.py"]
 exclude = ["**_pb2.py", "**_pb2.pyi", "**_pb2_grpc.py", "**_pb2_grpc.pyi"]
 line-length = 120
