--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
+yarl = "^1.18.0"
 protobuf = {version = "^5.26.1", optional = true}
 googleapis-common-protos = {version = "^1.65.0", optional = true}
 aiormq = {version = "^6.8.1", optional = true}
