fix publish workflow, set python 3.12

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,9 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - uses: abatilo/actions-poetry@v2
       - name: Poetry build
         run: poetry build -n
