--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "BrokRPC"
-version = "0.2.0"
+version = "0.2.1"
 description = "framework for gRPC like server-client communication over message brokers"
 authors = ["zerlok <danil.troshnev@gmail.com>"]
 readme = "README.md"
@@ -47,12 +47,12 @@ types-protobuf = "^5.26.0.20240422"
 mypy = "^1.13.0"
 pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
-ruff = "^0.7.4"
+ruff = "^0.8.0"
 pytest-asyncio = "^0.24.0"
 pytest-timeout = "^2.3.1"
 pytest-mypy-plugins = "^3.1.2"
 types-aiofiles = "^24.1.0.20240626"
-pyprotostuben = "0.2.1"
+pyprotostuben = "^0.3.1"
 
 
 [build-system]
