--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,13 @@ protobuf = {version = "^5.26.1", optional = true}
 googleapis-common-protos = {version = "^1.65.0", optional = true}
 aiormq = {version = "^6.8.1", optional = true}
 aiofiles = {version = "^24.1.0", optional = true}
+redis = {version = "^5.2.0", optional = true}
 
 [tool.poetry.extras]
 cli = ["aiofiles"]
 protobuf = ["protobuf", "googleapis-common-protos"]
 aiormq = ["aiormq"]
+redis = ["redis"]
 
 [tool.poetry.scripts]
 brokrpc = "brokrpc.cli:main"
