--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -62,6 +62,10 @@ jobs:
         image: rabbitmq:4.0.2-alpine
         ports:
           - 5672:5672
+      redis:
+        image: redis:7.4.1-alpine
+        ports:
+          - 6379:6379
     strategy:
       fail-fast: false
       matrix:
@@ -88,7 +92,7 @@ jobs:
       - name: Install the project dependencies
         run: poetry install --all-extras
       - name: Run pytest
-        run: poetry run pytest --broker-url=amqp://guest:guest@localhost:5672/ --broker-retry-delay=3 --broker-retry-delay-mode=constant --broker-retries-limit=10 --cov-report=xml
+        run: poetry run pytest --broker-retry-delay=3 --broker-retry-delay-mode=constant --broker-retries-limit=10 --cov-report=xml
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v4
         with:
