deny RPC messages in RedisPublisher (quick test fail)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ pytest-timeout = "^2.3.1"
 pytest-mypy-plugins = "^3.1.2"
 types-aiofiles = "^24.1.0.20240626"
 pyprotostuben = "^0.3.1"
+types-redis = "^4.6.0.20241004"
 
 
 [build-system]
