--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,7 +98,7 @@ disallow_any_unimported = true
 #disallow_any_expr = true
 disallow_any_decorated = true
 # TODO: disallow explicit any usage
-#disallow_any_explicit = true
+disallow_any_explicit = true
 disallow_any_generics = true
 disallow_subclassing_any = true
 disallow_untyped_calls = true
@@ -139,6 +139,7 @@ disallow_any_unimported = false
 # NOTE: allow return `typing.Any` in test fixtures (e.g. mock objects created with `create_autospec`)
 [[tool.mypy.overrides]]
 module = ["tests.*"]
+disallow_any_explicit = false
 warn_return_any = false
 
 # NOTE: pydantic.BaseModel has fields with Any
